Ensure no borders causing horizontal scrollbars with narrow screens

--- a/assets/erudite60em.css
+++ b/assets/erudite60em.css
@@ -5,6 +5,7 @@
 #footer-wrap-inner,
 .message {
 	width: 100%;
+	border: 0;
 }
 
 #content {
